<resources>
    <string name="app_name">MuseumProject</string>
    <!--bottom-->
    <string name="bottom_01">首页</string>
    <string name="bottom_02">智慧导览</string>
    <string name="bottom_03">体验互动</string>
    <string name="bottom_04">我的</string>
    <!--首页-->
    <string name="home_bwg">博物馆</string>
    <string name="home_gc">馆藏</string>
    <string name="home_zl">展览</string>
    <string name="home_hd">活动</string>
    <string name="home_pmd">明星说文物</string>
    <string name="home_zxhd">最新活动</string>
    <!--登录-->
    <string name="login_01">太原市博物馆</string>
    <string name="login_02">账号</string>
    <string name="login_03">密码</string>
    <string name="login_04">请输入手机号</string>
    <string name="login_05">请输入密码</string>
    <string name="login_06">登  录</string>
    <string name="login_07">注册</string>
    <string name="login_08">忘记密码</string>
    <string name="login_09">手机号</string>
    <string name="login_10">新密码</string>
    <string name="login_11">请输入新密码</string>
    <string name="login_12">确&#160;&#160;&#160;&#160;认</string>
    <string name="login_13">请再输入密码</string>
    <string name="login_14">验证码</string>
    <string name="login_15">获取验证码</string>
    <string name="login_16">用户名</string>
    <string name="login_17">请输入用户名</string>
    <string name="login_18">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_19">登录</string>
    <string name="login_20">提  交</string>
    <string name="login_21">注  册</string>
    <!--博物馆-->
    <string name="bwg_01">太原博物馆</string>
    <string name="bwg_02">【 预约提醒 】</string>
    <string name="bwg_03">参观日期</string>
    <string name="bwg_04">参观时间</string>
    <string name="bwg_05">预约</string>
    <string name="bwg_06">请填写预约人信息</string>
    <string name="bwg_07">请输入姓名</string>
    <string name="bwg_08">请输入证件号码</string>
    <string name="bwg_09">请输入手机号码</string>
    <string name="bwg_10">提交</string>
    <!--展览详细-->
    <string name="zl_del_01">分享</string>
    <string name="zl_del_02">收藏</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <!--我的-->
    <string name="my_01">我的购买</string>
    <string name="my_02">我的预约</string>
    <string name="my_03">我的收藏</string>
    <string name="my_04">系统设置</string>
    <string name="my_05">清除缓存</string>
    <string name="my_06">关于我们</string>
    <string name="my_07">服务咨询</string>
    <string name="my_08">绑定手机</string>
    <string name="my_09">修改密码</string>
    <string name="my_10">+86</string>
    <string name="my_11">请输入手机号码</string>
    <string name="my_12">验证码</string>
    <string name="my_13">获取</string>
    <string name="my_14">提  交</string>
    <string name="my_15">旧密码</string>
    <string name="my_16">新密码</string>
    <string name="my_17">确认新密码</string>
    <string name="my_18">保存</string>
    <string name="my_19">请输入旧密码</string>
    <string name="my_20">请输入新密码</string>
    <string name="my_21">请再次输入密码</string>
</resources>
