<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    >
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:paddingLeft="@dimen/height_9"
        android:paddingRight="@dimen/height_9"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_15"
            android:textColor="@color/home_color"
            android:layout_gravity="center"
            android:textSize="@dimen/size_16"
            />
        <EditText
            android:id="@+id/old_pass_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/my_19"
            android:textColorHint="@color/home_gray"
            android:layout_marginLeft="@dimen/height_20"
            android:textSize="@dimen/size_16"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:gravity="right|center"
            android:maxLines="1"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:paddingLeft="@dimen/height_9"
        android:paddingRight="@dimen/height_9"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_16"
            android:textColor="@color/home_color"
            android:layout_gravity="center"
            android:textSize="@dimen/size_16"
            />
        <EditText
            android:id="@+id/new_pass_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/my_20"
            android:textColorHint="@color/home_gray"
            android:layout_marginLeft="@dimen/height_20"
            android:textSize="@dimen/size_16"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:gravity="right|center"
            android:maxLines="1"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:paddingLeft="@dimen/height_9"
        android:paddingRight="@dimen/height_9"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_17"
            android:textColor="@color/home_color"
            android:layout_gravity="center"
            android:textSize="@dimen/size_16"
            />

        <EditText
            android:id="@+id/sure_pass_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/home_gray"
            android:layout_marginLeft="@dimen/height_20"
            android:hint="@string/my_21"
            android:textSize="@dimen/size_16"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:gravity="right|center"
            android:maxLines="1"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/height_150"
        android:layout_height="@dimen/height_40"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="@dimen/height_100"
        android:layout_gravity="center"
        android:text="@string/my_18"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18"
        />
</LinearLayout>