<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_yuan"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/height_70"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_01"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/height_13"
        android:textColor="@color/login_text"
        android:textSize="@dimen/size_20"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/height_55"
        android:layout_marginRight="@dimen/height_55"
        android:layout_marginTop="@dimen/height_55"
        android:layout_marginBottom="@dimen/height_8"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_09"
            android:textColor="@color/login_text"
            android:textSize="@dimen/size_20"
            />
        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_04"
            android:layout_marginLeft="@dimen/height_14"
            android:textColorHint="@color/login_gray"
            android:background="@null"
            android:textSize="@dimen/size_16"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:nextFocusForward="@+id/yzm_et"
            android:maxLines="1"
            android:inputType="number"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/yellow"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/height_55"
        android:layout_marginRight="@dimen/height_55"
        android:layout_marginBottom="@dimen/height_8"
        android:layout_marginTop="@dimen/height_15"
        >
        <TextView
            android:id="@+id/yzm_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_14"
            android:textColor="@color/login_text"
            android:textSize="@dimen/size_20"
            />

        <EditText
            android:id="@+id/yzm_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height_14"
            android:textColorHint="@color/login_gray"
            android:background="@null"
            android:textSize="@dimen/size_16"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_toRightOf="@id/yzm_tv"
            android:nextFocusForward="@+id/user_et"
            />
        <TextView
            android:id="@+id/yaz_btv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_15"
            android:layout_alignParentRight="true"
            android:textColor="@color/login_gray"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/yellow"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/height_55"
        android:layout_marginRight="@dimen/height_55"
        android:layout_marginBottom="@dimen/height_8"
        android:layout_marginTop="@dimen/height_15"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_16"
            android:textColor="@color/login_text"
            android:textSize="@dimen/size_20"
            />

        <EditText
            android:id="@+id/user_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_17"
            android:layout_marginLeft="@dimen/height_14"
            android:textColorHint="@color/login_gray"
            android:background="@null"
            android:textSize="@dimen/size_16"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:nextFocusForward="@+id/pass_et"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/yellow"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/height_55"
        android:layout_marginRight="@dimen/height_55"
        android:layout_marginBottom="@dimen/height_8"
        android:layout_marginTop="@dimen/height_15"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_18"
            android:textColor="@color/login_text"
            android:textSize="@dimen/size_20"
            />

        <EditText
            android:id="@+id/pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_05"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/height_14"
            android:textColorHint="@color/login_gray"
            android:background="@null"
            android:textSize="@dimen/size_16"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/yellow"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        android:layout_marginTop="@dimen/height_50"
        android:text="@string/login_20"
        android:textColor="@color/white"
        android:textSize="@dimen/size_24"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_45"
        android:layout_marginRight="@dimen/height_45"
        android:layout_marginTop="@dimen/height_10"
        >
        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_19"
            android:textColor="@color/login_gray"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:id="@+id/forget_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_08"
            android:textColor="@color/login_gray"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
</LinearLayout>