<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    >
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/my_bind_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_55"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="@dimen/height_35"
            android:layout_height="wrap_content"
            android:text="@string/my_10"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/my_11"
            android:textColorHint="@color/home_gray"
            android:textSize="@dimen/size_16"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"
            android:maxLines="1"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:id="@+id/my_code_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_55"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/code_et"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/my_12"
            android:background="@null"
            android:textColorHint="@color/home_gray"
            android:layout_marginLeft="@dimen/height_43"
            android:textSize="@dimen/size_16"
            android:singleLine="true"
            android:maxLines="1"
            />
        <TextView
            android:layout_width="@dimen/height_80"
            android:layout_height="@dimen/height_30"
            android:text="@string/my_13"
            android:background="@drawable/bind_bg"
            android:textColor="@color/yellow"
            android:gravity="center"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/height_150"
        android:layout_height="@dimen/height_40"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="@dimen/height_100"
        android:layout_gravity="center"
        android:text="@string/my_14"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18"
        />
</LinearLayout>