<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:id="@+id/id_root_lv"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bwg_trans"
        android:layout_marginLeft="@dimen/height_35"
        android:layout_marginRight="@dimen/height_35"
        android:padding="@dimen/height_25"
        >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/bwg_06"
           android:textColor="@color/white"
           android:textSize="@dimen/size_18"
           android:layout_gravity="center_horizontal"
           />
        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:hint="@string/bwg_07"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size_12"
            android:layout_marginTop="@dimen/height_10"

            android:imeOptions="actionNext"
            android:singleLine="true"
            android:nextFocusForward="@+id/idcard_et"
            android:maxLines="1"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/idcard_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:hint="@string/bwg_08"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size_12"

            android:imeOptions="actionNext"
            android:singleLine="true"
            android:nextFocusForward="@+id/phone_et"
            android:maxLines="1"
           />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:background="@color/white"
            />
        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:hint="@string/bwg_09"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/size_12"
            android:inputType="number"

            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="@dimen/height_100"
            android:layout_height="@dimen/height_30"
            android:textColor="@color/white"
            android:text="@string/bwg_10"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/heigmt_40"
            />
    </LinearLayout>

</LinearLayout>