<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_50"
    android:background="@color/white"
    android:layout_gravity="bottom"
    android:orientation="horizontal" >
    <RadioGroup
        android:id="@+id/main_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <RelativeLayout
            style="@style/tab_item_background"
            >
            <RadioButton
                android:id="@+id/tab01_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/home_icon"
                android:clickable="true"
                android:text="@string/bottom_01"
                android:textSize="@dimen/size_12"
                android:button="@null"
                android:drawablePadding="@dimen/height_5"
                android:textColor="@color/home_color"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/tab_item_background"
            >
            <RadioButton
                android:id="@+id/tab02_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/zhdl_icon"
                android:clickable="true"
                android:text="@string/bottom_02"
                android:textSize="@dimen/size_12"
                android:button="@null"
                android:drawablePadding="@dimen/height_5"
                android:textColor="@color/home_color"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/tab_item_background"
            >
            <RadioButton
                android:id="@+id/tab03_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/tyhd_icon"
                android:clickable="true"
                android:text="@string/bottom_03"
                android:textSize="@dimen/size_12"
                android:button="@null"
                android:drawablePadding="@dimen/height_5"
                android:textColor="@color/home_color"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/tab_item_background"
            >
            <RadioButton
                android:id="@+id/tab04_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/mine_icon"
                android:clickable="true"
                android:text="@string/bottom_04"
                android:textSize="@dimen/size_12"
                android:button="@null"
                android:drawablePadding="@dimen/height_5"
                android:textColor="@color/home_color"
                />
        </RelativeLayout>
    </RadioGroup>

</LinearLayout>