<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@mipmap/my_phogo_bg"
         >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
             >
             <ImageView
                 android:id="@+id/photo_img"
                 android:layout_width="@dimen/height_90"
                 android:layout_height="@dimen/height_90"
                 android:src="@mipmap/my_photo"
                 android:layout_gravity="center"
                 />
             <TextView
                 android:id="@+id/title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="爱哭的毛毛虫"
                 android:textColor="@color/yellow"
                 android:layout_marginTop="@dimen/height_8"
                 android:textSize="@dimen/size_18"
                 />
         </LinearLayout>
     </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_8"
        android:background="@color/home_bg"
        />
    <LinearLayout
        android:id="@+id/my_buy_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_01"
            android:drawableLeft="@mipmap/my_buy_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:id="@+id/my_yuyue_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_02"
            android:drawableLeft="@mipmap/my_yuyue_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:id="@+id/my_love_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_03"
            android:drawableLeft="@mipmap/my_love_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_8"
        android:background="@color/home_bg"
        />
    <LinearLayout
        android:id="@+id/my_set_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_04"
            android:drawableLeft="@mipmap/my_set_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:id="@+id/my_del_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_05"
            android:drawableLeft="@mipmap/my_delete_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_8"
        android:background="@color/home_bg"
        />
    <LinearLayout
        android:id="@+id/my_about_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_06"
            android:drawableLeft="@mipmap/my_about_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0.5"
        android:background="@color/my_line"
        />
    <LinearLayout
        android:id="@+id/my_fuwu_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/height_5"
        android:paddingLeft="@dimen/height_8"
        android:paddingRight="@dimen/height_8"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_07"
            android:drawableLeft="@mipmap/my_phone_icon"
            android:drawableRight="@mipmap/my_icon_right"
            android:textColor="@color/home_color"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/height_10"
            android:textSize="@dimen/size_16"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>